--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "description": "",
   "devDependencies": {
     "cy-verify-downloads": "^0.2.5",
-    "cypress": "^13.11.0"
+    "cypress": "^13.11.0",
+    "cypress-mochawesome-reporter": "^3.8.2"
   },
   "dependencies": {
     "node-xlsx": "^0.24.0",
